--- a/themes/next/source/css/_common/components/post/post.styl
+++ b/themes/next/source/css/_common/components/post/post.styl
@@ -33,6 +33,15 @@
   transform: rotate(30deg);
 }
 
+.post-body p a{
+      color: #0593d3;
+      border-bottom: none;
+      &:hover {
+        color: #0477ab;
+        text-decoration: underline;
+      }
+    }
+
 @import "post-expand";
 @import "post-collapse";
 @import "post-type";
