--- a/themes/maupassant-hexo/layout/_partial/footer.pug
+++ b/themes/maupassant-hexo/layout/_partial/footer.pug
@@ -6,7 +6,7 @@
   |  by
   a(rel='nofollow', target='_blank', href='https://github.com/pagecho')  Cho.
   if theme.busuanzi.enable == true
-    script(src='https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js', async)
+    script(src='https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js', async)
     if theme.busuanzi.site_pv == true
       span#busuanzi_container_site_pv= ' | 访问量'
         span#busuanzi_value_site_pv
