--- a/themes/aircloud1/layout/archive.ejs
+++ b/themes/aircloud1/layout/archive.ejs
@@ -32,9 +32,7 @@ site.posts.sort('date').reverse().forEach(function(post){
             <i class="fa fa-angle-double-right" aria-hidden="true"></i>
             <a href="<%- config.root %><%- post.path %>">
                         <span>
-                            <%- (post.title || "Untitled").replace(/[<>&"]/g,function(c){
-                                return {'<':'&lt;','>':'&gt;','&':'&amp;','"':'&quot;'}[c];
-                            }) %>
+                            <%- post.title || "Untitled" %>
                         </span>
             </a>
             <!-- <p class="post-meta">{{ post.date | date:"%Y-%m-%d" }}</p> -->
