change theme from maupassant to even

--- a/themes/maupassant-hexo/layout/_partial/head.pug
+++ b/themes/maupassant-hexo/layout/_partial/head.pug
@@ -1,5 +1,6 @@
 head
     meta(http-equiv='content-type', content='text/html; charset=utf-8')
+    meta(name='creferrer', content='no-referrer')
     meta(content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0', name='viewport')
     meta(content='yes', name='apple-mobile-web-app-capable')
     meta(content='black-translucent', name='apple-mobile-web-app-status-bar-style')
