--- a/themes/maupassant-hexo/layout/index.pug
+++ b/themes/maupassant-hexo/layout/index.pug
@@ -27,20 +27,22 @@ block content
         .post-content
           != post.excerpt
       else if post.content
-        - var br = 0
-        - for (var i = 0; i < 5; ++i) {
-          - br = post.content.indexOf('\n',br+1)
-          if br<0
-            - break
-          if br >150
-            - break
-        - }
+        .post-content
+          != post.content.substring(0, 100)
+        //- - var br = 0
+        //- - for (var i = 0; i < 5; ++i) {
+        //-   - br = post.content.indexOf('\n',br+1)
+        //-   if br<0
+        //-     - break
+        //-   if br >900
+        //-     - break
+        //- - }
         //- if br <= 0
         //-   .post-content
         //-     != post.content
         //- else
         //-   .post-content
-        //-     != post.content.substring(0, br)
+        //-     != post.content.substring(0, 2)
       p(class='readmore')
         a(href=url_for(post.path))= __('Readmore')
 
